NXP-33538: Gate Relation document search indexing
When nuxeo.search.indexing.relation.enabled=true, Relation documents
(placeless documents not extending Document in the type hierarchy)
are included in search indexing, reindexing and query conversion.

Disabled by default to preserve backward compatibility.